Added theme folder Added RootColours theme

--- a/KKTerminalQT/app/Makefile.am
+++ b/KKTerminalQT/app/Makefile.am
@@ -10,6 +10,9 @@ kkterminalqt_CXXFLAGS = -O3
 pixfilesdir = $(pkgdatadir)/pixmaps
 pixfiles_DATA = ../resources/pixmaps/*
 
+userthemesdir = $(pkgdatadir)/themes
+userthemes_DATA = ../resources/themes/*
+
 bin_PROGRAMS = kkterminalqt
 
 man1_MANS = ../resources/man/kkterminalqt.1
